	- Removed 'connect_ports' from config, use general ACLs instead.
	- Changed requested listen queue length to 1/4 of getMaxFD().
	- Rewrote SSL/CONNECT handlers.  Now doesn't use a StoreEntry.
	- Fixed some aborted objects getting stuck in VM bug.
	- Fixed ftpget PASV reply sscanf to work for VMS ftpd.
	- Changed FTP URL parsing to use urlParse().
	- Changed ftpget to skip RETR command if URLs ends with '/'.
	- Changed ftpget to display README at the bottom if there are other
	  server messages.
	- Changed ftpget to not reopen a new data connection
  	  if one is already open.
	- Fixed handling of FTP URLs with spaces (and other unsafe characters)
	- Changed ftpget to only generate BASE HREF if the FTP URL does
	  not end with '/'.


changes to squid-1.0.beta7:

	- Fixed comm_udp_sendto continuous loop bug
	- Fixed URLs-with-colon-but-no-port-number bug
	- Fixed sending ICP queries for HEAD requests
	- Changed 'server_list' output.  Added RTT, Fetches, Hits, Misses,
	  and percents.
	- Fixed setuid bug causing some logs to be owned by root.
	- Fixed virtual host mode (-V option)
	- Added read(2) instrumentation for HTTP and FTP.
	- Changed neighbor initialization to continue if DNS lookup fails.
	- Lint cleanup

beta8:

	- More friendly CFLAGS and LDFLAGS for configure
	- ACL_ALLWEEK bugfix
	- Added missing increment of UDP connection counter.
	- Changed ftpget select to check for EWOULDBLOCK/EAGAIN
	  (workaround for broken Solaris select(2)).
	- Fixed MALLINFO calls for Linux
	- Fixed strerror() problems on SunOS 4.1.x
	- Fixed DefaultAnnounceRate; set to zero by defult.
	- Changed all port variables to u_short.
	- Created AF_UNIX versions of comm_open(), comm_connect().
	- Changed ftpget server to use UNIX domain socket.
	- Removed RESET_SIGNAL_HANDLER check--always reset the signal
	  handler.
	- Added instrumentation of basic IPCache stats.
	- Fixed calculation of neighbor average RTT.
	- Added 'outbound_addr_list' to config