@@ -173,3 +173,7 @@ beta8:
 	- Added instrumentation of basic IPCache stats.
 	- Fixed calculation of neighbor average RTT.
 	- Added 'outbound_addr_list' to config
+	- Change getFirstParent() to getFirstUpParent().
+	- Changed ftpget to use an additional pipe() for crash detection
+	- Added ICP_OP_DENIED message type
+	- Added patches for Nextstep port from Luke Howard <lukeh@vurt.schnet.edu.au>
